Refactor catalogue card styles: Adjust heights for improved layout consistency and update blog card classes for better structure.

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfumas.com</title>
   <link rel="stylesheet" href="../CSS/index.css" />
-  <link rel="stylesheet" href="../CSS/Media-Queries.css" />
   <link rel="stylesheet" href="../CSS/blog.css" />
   <link rel="stylesheet" href="../CSS/color-button.css" />
   <link rel="stylesheet" href="../CSS/Color-Button-Smaller.css">
+  <link rel="stylesheet" href="../CSS/Media-Queries.css" />
   <script src="https://kit.fontawesome.com/4f11154ed4.js" crossorigin="anonymous"></script>
   <script src="../javascript.js" defer></script>
 </head>
@@ -40,7 +40,7 @@
     <section id="catalogue" class="catalogue" data-hero-container>
       <h1 class="section-headline">Blog & Articulos</h1>
       <article class="catalogue__categories">
-        <div class="catalogue__card">
+        <div class="catalogue__card blog">
           <img src="../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy">
           <h3>Nuestros Beneficios</h3>
           <p>Descubre las ventajas exclusivas que ofrecemos a nuestros clientes: productos de alta calidad, atención personalizada y una experiencia de compra única.</p>
@@ -51,7 +51,7 @@
             </span>
           </a>
         </div>
-        <div class="catalogue__card">
+        <div class="catalogue__card blog">
           <img src="../Images/Blog/ciencia-fragancias.jpg" alt="Ciencia de las Fragancias" loading="lazy" width="400" height="300">
           <h3>Ciencia de las Fragancias y Educación</h3>
           <p>Ideal para lectores de blog que aman aprender el “por qué” detrás del comportamiento de las fragancias.</p>
@@ -62,7 +62,7 @@
             </span>
           </a>
         </div>
-        <div class="catalogue__card">
+        <div class="catalogue__card blog">
           <img src="../Images/Blog/guia-ocasiones.jpg" alt="Guía Según la Ocasión" loading="lazy" width="400" height="300">
           <h3>Guías Según la Ocasión y el Momento</h3>
           <p>Ayuda a los clientes a saber cuándo usar ciertos perfumes según el clima, la hora del día o la actividad.</p>
@@ -73,7 +73,7 @@
             </span>
           </a>
         </div>
-        <div class="catalogue__card">
+        <div class="catalogue__card blog">
           <img src="../Images/Blog/estilo-personal.jpg" alt="Estilo Personal" loading="lazy" width="400" height="300">
           <h3>Estilo Personal y Uso Avanzado</h3>
           <p>Para quienes desarrollan una relación más profunda y personalizada con las fragancias.</p>
@@ -84,7 +84,7 @@
             </span>
           </a>
         </div>
-        <div class="catalogue__card">
+        <div class="catalogue__card blog">
           <img src="../Images/Blog/guia-regalos.jpg" alt="Guía para Comprar y Regalar" loading="lazy" width="400" height="300">
           <h3>Guía para Comprar y Regalar</h3>
           <p>Dirigido a compradores de regalos, compradores online y coleccionistas de perfumes.</p>
@@ -98,7 +98,8 @@
       </article>
     </section>
   </header>
-  <main data-main></main>
+  <main data-main>
+  </main>
   <footer data-footer>
     <div class="footer-content container">
       <section class="footer-presentation">
@@ -180,14 +181,6 @@
           </span>
         </div>
       </section>
-    </div>
-    <div class="perfumas-rights">
-      <hr class="divider-line">
-      <p class="rights">Perfumas 2024</p>
-    </div>
-  </footer>
-</body>
-</html>
     </div>
     <div class="perfumas-rights">
       <hr class="divider-line">
