--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -44,7 +44,7 @@
           <img src="../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy">
           <h3>Nuestros Beneficios</h3>
           <p>Descubre las ventajas exclusivas que ofrecemos a nuestros clientes: productos de alta calidad, atención personalizada y una experiencia de compra única.</p>
-          <a class="PDF-link" href="./blogs/our-benefits.html" target="_blank">
+          <a class="PDF-link" href="./blogs/our-benefits.html" target="_self">
             <span class="call-to-action" style="--clr:#fff">
               <span>Explorar</span>
               <i></i>
@@ -55,7 +55,7 @@
           <img src="../Images/Blog/ciencia-fragancias.jpg" alt="Ciencia de las Fragancias" loading="lazy" width="400" height="300">
           <h3>Ciencia de las Fragancias y Educación</h3>
           <p>Ideal para lectores de blog que aman aprender el “por qué” detrás del comportamiento de las fragancias.</p>
-          <a class="PDF-link" href="./blogs/fragrance-science.html" target="_blank">
+          <a class="PDF-link" href="./blogs/fragrance-science.html" target="_self">
             <span class="call-to-action" style="--clr:#fff">
               <span>Explorar</span>
               <i></i>
@@ -66,7 +66,7 @@
           <img src="../Images/Blog/guia-ocasiones.jpg" alt="Guía Según la Ocasión" loading="lazy" width="400" height="300">
           <h3>Guías Según la Ocasión y el Momento</h3>
           <p>Ayuda a los clientes a saber cuándo usar ciertos perfumes según el clima, la hora del día o la actividad.</p>
-          <a class="PDF-link" href="./blogs/occasion-guides.html" target="_blank">
+          <a class="PDF-link" href="./blogs/occasion-guides.html" target="_self">
             <span class="call-to-action" style="--clr:#fff">
               <span>Explorar</span>
               <i></i>
@@ -77,7 +77,7 @@
           <img src="../Images/Blog/estilo-personal.jpg" alt="Estilo Personal" loading="lazy" width="400" height="300">
           <h3>Estilo Personal y Uso Avanzado</h3>
           <p>Para quienes desarrollan una relación más profunda y personalizada con las fragancias.</p>
-          <a class="PDF-link" href="./blogs/personal-style.html" target="_blank">
+          <a class="PDF-link" href="./blogs/personal-style.html" target="_self">
             <span class="call-to-action" style="--clr:#fff">
               <span>Explorar</span>
               <i></i>
@@ -88,7 +88,7 @@
           <img src="../Images/Blog/guia-regalos.jpg" alt="Guía para Comprar y Regalar" loading="lazy" width="400" height="300">
           <h3>Guía para Comprar y Regalar</h3>
           <p>Dirigido a compradores de regalos, compradores online y coleccionistas de perfumes.</p>
-          <a class="PDF-link" href="./blogs/gift-guide.html" target="_blank">
+          <a class="PDF-link" href="./blogs/gift-guide.html" target="_self">
             <span class="call-to-action" style="--clr:#fff">
               <span>Explorar</span>
               <i></i>
