Update footer copyright to display current year dynamically

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -184,7 +184,14 @@
     </div>
     <div class="perfumas-rights">
       <hr class="divider-line">
-      <p class="rights">Perfumas 2024</p>
+      <p>
+        Copyright © Perfumas
+        <script>
+          document.write(new Date().getFullYear())
+        </script>
+        
+
+      </p>
     </div>
   </footer>
 </body>
