--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -271,7 +271,14 @@
       </div>
       <div class="perfumas-rights">
         <hr class="divider-line">
-        <p class="rights">Perfumas 2024</p>
+        <p>
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear())
+          </script>
+          Perfumas
+
+        </p>
       </div>
     </footer>
   </body>
