--- a/HTML/index.html
+++ b/HTML/index.html
@@ -674,12 +674,15 @@
   
         </div>
         <div class="perfumas-rights">
-  
           <hr class="divider-line"></hr>
-          <p class="rights">
-             Perfumas 2024
+          <p>
+            Copyright ©
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+            Perfumas
+
           </p>
-          
         </div> 
   
       </footer>
