--- a/HTML/about-us.html
+++ b/HTML/about-us.html
@@ -181,7 +181,7 @@
             
             <h3>Navegación</h3>
             <ul>
-              <li><a href="./index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="./about-us.html">Acerca de nosotros</a></li>
               <li><a href="./catalogo.html">Catálogo</a></li>
               <li><a href="./contact-us.html">Contáctanos</a></li>
