--- a/HTML/contact-us.html
+++ b/HTML/contact-us.html
@@ -22,7 +22,7 @@
       <nav class="nav-mobile" data-mobile-menu>
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
         <ul class="mobile-links">
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="./about-us.html">Acerca de nosotros</a></li>
           <li><a href="./catalogo.html">Catálogo</a></li>
           <li><a href="./contact-us.html">Contáctanos</a></li>
@@ -36,7 +36,7 @@
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
         <i class="fa-solid fa-bars" data-menu-bar></i>
         <ul class="desktop-links">
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="./about-us.html">Acerca de nosotros</a></li>
           <li><a href="./catalogo.html">Catálogo</a></li>
           <li><a href="./contact-us.html">Contáctanos</a></li>
@@ -134,7 +134,7 @@
               
               <h3>Navegación</h3>
               <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./about-us.html">Acerca de nosotros</a></li>
                 <li><a href="./catalogo.html">Catálogo</a></li>
                 <li><a href="./contact-us.html">Contáctanos</a></li>
