--- a/HTML/blogs/gift-guide.html
+++ b/HTML/blogs/gift-guide.html
@@ -18,7 +18,7 @@
       <nav class="nav-mobile" data-mobile-menu>
         <img class="logo" src="../../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
         <ul class="mobile-links">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="../../index.html">Home</a></li>
           <li><a href="../about-us.html">Acerca De Nosotros</a></li>
           <li><a href="../catalogo.html">Catálogo</a></li>
           <li><a href="../contact-us.html">Contáctanos</a></li>
@@ -30,7 +30,7 @@
         <img class="logo" src="../../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
         <i class="fa-solid fa-bars" data-menu-bar></i>
         <ul class="desktop-links">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="../../index.html">Home</a></li>
           <li><a href="../about-us.html">Acerca De Nosotros</a></li>
           <li><a href="../catalogo.html">Catálogo</a></li>
           <li><a href="../contact-us.html">Contáctanos</a></li>
@@ -201,10 +201,10 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
-                <li><a href="./catalogo.html">Catálogo</a></li>
-                <li><a href="./contact-us.html">Contáctanos</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../about-us.html">Acerca de Nosotros</a></li>
+                <li><a href="../catalogo.html">Catálogo</a></li>
+                <li><a href="../contact-us.html">Contáctanos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
