--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -201,10 +201,10 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
-                <li><a href="./catalogo.html">Catálogo</a></li>
-                <li><a href="./contact-us.html">Contáctanos</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../about-us.html">Acerca de Nosotros</a></li>
+                <li><a href="../catalogo.html">Catálogo</a></li>
+                <li><a href="../contact-us.html">Contáctanos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
