Fix navigation links to ensure correct path references across multiple HTML files

--- a/HTML/about-us.html
+++ b/HTML/about-us.html
@@ -23,7 +23,7 @@
     <nav class="nav-mobile" data-mobile-menu>
       <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
       <ul class="mobile-links">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="./about-us.html">Acerca de nosotros</a></li>
         <li><a href="./catalogo.html">Catálogo</a></li>
         <li><a href="./contact-us.html">Contáctanos</a></li>
@@ -36,7 +36,7 @@
       <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
       <i class="fa-solid fa-bars" data-menu-bar></i>
       <ul class="desktop-links">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="./about-us.html">Acerca de nosotros</a></li>
         <li><a href="./catalogo.html">Catálogo</a></li>
         <li><a href="./contact-us.html">Contáctanos</a></li>
