--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -18,7 +18,7 @@
     <nav class="nav-mobile" data-mobile-menu>
       <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
       <ul class="mobile-links">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="./about-us.html">Acerca De Nosotros</a></li>
         <li><a href="./catalogo.html">Catálogo</a></li>
         <li><a href="./contact-us.html">Contáctanos</a></li>
