--- a/HTML/about-us.html
+++ b/HTML/about-us.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfumas.com</title>
-  <link rel="icon" type="image/x-icon" href="../images/Perfumas-logo.png">
+  <link rel="icon" type="image/png" href="https://perfumas.com.co/favico.ico">
 
   <link rel="stylesheet" href="../CSS/index.css" />
   <link rel="stylesheet" href="../CSS/about-us.css" />
