Update testimony section with new image and client feedback

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfumas.com</title>
-    <link rel="icon" type="image/x-icon" href="images/Perfumas-logo.png">
+    <link rel="icon" type="image/png" href="https://perfumas.com.co/favico.ico">
 
     
     <link rel="stylesheet" href="CSS/index.css" />
@@ -276,11 +276,14 @@
   
           <div class="testimony">
   
-            <img class="testimony-client-photo" src="Images/Home/Testimony-Client.jpg" alt="client phot  o" class="client-testimony-image">
+            <img class="testimony-client-photo" src="Images/Testimony.jpg" alt="client phot  o" class="client-testimony-image">
   
             <h3 class="text-testimony">
-              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ab rem ad facilis sequi iste possimus consequuntur architecto officiis voluptas provident, optio ratione facere quisquam cupiditate, fuga placeat quos! Distinctio."
+              “Lo que más me gustó es la fragancia, que perdura durante horas. El empaque es fantástico, ya que puedes escoger entre una gran variedad. Además, el precio del producto es muy accesible.
+              La calidad es excelente: es una fragancia que conserva su aroma, muy agradable y duradero.
+              Lo recomiendo 100 % a mis amigos y conocidos”
             </h3>
+            <h3 class="text-testimony">Maria Jose Martinez</h3>
   
           </div>
           <div class="statistic">
