--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               La calidad es excelente: es una fragancia que conserva su aroma, muy agradable y duradero.
               Lo recomiendo 100 % a mis amigos y conocidos”
             </h3>
-            <h3 class="text-testimony">Maria Jose Martinez</h3>
+            <h3 class="text-testimony">— Maria Martinez Quiroga</h3>
   
           </div>
           <div class="statistic">
